tests/paczka1/fuzzy1/14595236.err
Error in line 1: hq1 S864 7,5
Error in line 15: x02MJ7Uc S829 65,34
Error in line 17: x02MJ7Uc S829 66,7
Error in line 21: S829 S864 13,68
Error in line 16: S829 S864 76,6
Error in line 33: x02MJ7Uc S864 56,5
Error in line 35: x02MJ7Uc A253 23,0
Error in line 36: x02MJ7Uc S864 69,6
